--- a/SmthNew/main/static/main/css/main.css
+++ b/SmthNew/main/static/main/css/main.css
@@ -1,11 +1,11 @@
 
-body{
-    background-color: #deb887;
+.custom-bg {
+    background-color: #deb887; /* Бежевый цвет */
 }
 <style>
         /* Дополнительные стили, если нужно */
         aside {
-            background-color: #f8f9fa;
+            background-color: #deb887;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
