--- a/SmthNew/main/templates/main/nav.html
+++ b/SmthNew/main/templates/main/nav.html
@@ -7,7 +7,7 @@
   <div class="navbar-links">
     <a href="{% url 'home' %}" class="nav-link">Главная</a>
     <a href="{% url 'about' %}" class="nav-link">Не совсем главная</a>
-    <a href="#" class="nav-link">Новенькое</a>
-    <a href="#" class="nav-link">Кто же такие птички?</a>
+    <a href="{% url 'dailynews' %}" class="nav-link">Новенькое</a>
+    <a href="{% url 'contacts' %}" class="nav-link">Кто же такие птички?</a>
   </div>
 </nav>
