--- a/SmthNew/main/templates/main/new.html
+++ b/SmthNew/main/templates/main/new.html
@@ -1,9 +1,29 @@
 {% extends 'main/layout.html' %}
 {% block title %}
-    Вторая страница DJ02
+    Вторая страница
 {% endblock %}
 
 {% block content %}
 
-    <h1>Вторая страница: работа с шаблонизатором</h1>
+    <h1>Птички на проводе: где новости летят на крыльях</h1>
+<br>
+<p>
+ Вы знаете, кто самые первые журналисты? Конечно же, птички!
+Они всегда были на передовой, принося новости на своих перьях. Или, может быть, на хвосте?
+    Ведь кто нуждается в интернете, когда у тебя есть крылья и сильная память? </p><br>
+ <p>
+   Голуби, например, были первыми курьерами. Они летали с важными сообщениями, и их можно было назвать первыми "твиттерами"
+— только вместо 280 символов они использовали 280 крыльевых взмахов.
+</p>
+<p>И если вы думаете, что это шутка, то вспомните, что в старые времена голуби были основными новостными агентами.
+Только представьте, как бы выглядела лента Twitter, если бы все твиты были написаны голубями: "Корма мало #голубьпроблемы"
+    или "Летел над парком, увидел кота #птичийжизнь". </p>
+    <br>
+    <p>Но теперь птички перешли на более современные технологии. Они создали свой собственный Twitter — Tweeter,
+где они делятся последними новостями из мира птиц. Только не удивляйтесь, если вместо хэштегов вы увидите птичьи трели.</p>
+<br>
+<p>На нашем сайте "Птички на проводе" мы продолжаем эту традицию, собирая для вас самые свежие новости,
+которые птички принесли на своих крыльях. Итак, присоединяйтесь к нам и оставайтесь на связи с миром, где новости летят на крыльях!
+</p>
+
 {% endblock %}
