--- a/SmthNew/main/templates/main/nav.html
+++ b/SmthNew/main/templates/main/nav.html
@@ -3,6 +3,7 @@
 <nav class="navbar">
   <div class="navbar-logo">
     <img src="{% static 'main/img/birds.jpg' %}" alt="Логотип Птички на проводе">
+    <h1 class="site-title">Птички на проводе</h1>
   </div>
   <div class="navbar-links">
     <a href="{% url 'home' %}" class="nav-link">Главная</a>
