--- a/SmthNew/main/templates/main/nav.html
+++ b/SmthNew/main/templates/main/nav.html
@@ -8,7 +8,9 @@
   <div class="navbar-links">
     <a href="{% url 'home' %}" class="nav-link">Главная</a>
     <a href="{% url 'about' %}" class="nav-link">Не совсем главная</a>
-    <a href="{% url 'dailynews' %}" class="nav-link">Новенькое</a>
+    <a href="{% url 'news_home' %}" class="nav-link">Новости</a>
+    <a href="{% url 'daily' %}" class="nav-link">Новенькое</a>
+
     <a href="{% url 'contacts' %}" class="nav-link">Кто же такие птички?</a>
   </div>
 </nav>
