--- a/SmthNew/main/templates/main/nav.html
+++ b/SmthNew/main/templates/main/nav.html
@@ -9,6 +9,7 @@
     <a href="{% url 'home' %}" class="nav-link">Главная</a>
     <a href="{% url 'about' %}" class="nav-link">Не совсем главная</a>
     <a href="{% url 'news_home' %}" class="nav-link">Новенькое</a>
+    <a href="{% url 'create_news' %}" class="nav-link">Поделиться новостью</a>
     <a href="{% url 'contacts' %}" class="nav-link">Кто же такие птички?</a>
   </div>
 </nav>
